...
      return;
    }
    setPage(page + 1);
    fetchNotifications();
  };
  return (
    <View style={styles.container} testID='notificationScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={notificationList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
