...
      return;
    }
    setPage(page + 1);
    fetchPagePosts();
  };
  return (
    <View style={styles.container} testID='pagePostScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={pagePostList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
